--- a/ServerMessaging.Playground/ServerMessaging.PlaygroundServer.csproj
+++ b/ServerMessaging.Playground/ServerMessaging.PlaygroundServer.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServerMessaging.Lib\ServerMessaging.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
