--- a/ServerMessaging.Terminal/ServerMessaging.Terminal.csproj
+++ b/ServerMessaging.Terminal/ServerMessaging.Terminal.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServerMessaging.Terminal.Infrastructure\ServerMessaging.Terminal.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
